--- a/anime/bucket.html
+++ b/anime/bucket.html
@@ -18,8 +18,11 @@
       --font-family: 'Poppins', sans-serif;
     }
     html, body {
-      height: 100%; margin: 0; font-family: var(--font-family);
-      background-color: var(--bg-color); color: var(--text-color);
+      height: 100%;
+      margin: 0;
+      font-family: var(--font-family);
+      background-color: var(--bg-color);
+      color: var(--text-color);
       overflow-x: hidden;
     }
     .loader-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: none; flex-direction: column; align-items: center; justify-content: center; z-index: 9999; }
@@ -27,7 +30,7 @@
     .loader-bar { width: 0%; height: 100%; background: var(--accent-color); transition: width 0.1s linear; }
     .video-container { position: relative; padding-top: 56.25%; max-width: 800px; margin: 20px auto; background-color: black; }
     #videoPlayer, .overlay-layer { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-    .controls, .progress-bar, .toggle-btn { opacity: 0; transition: opacity 0.3s; }
+    .controls, .progress-bar { opacity: 0; transition: opacity 0.3s; }
     .controls { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; gap: 6px; z-index: 1000; }
     .control-btn { background-color: var(--control-bg); color: var(--text-color); border: none; padding: 6px 10px; border-radius: 6px; cursor: pointer; font-size: 12px; }
     .control-btn:hover { background-color: var(--accent-color); }
@@ -70,7 +73,8 @@
 </head>
 <body>
   <div id="loaderOverlay" class="loader-overlay">
-    <div class="loader-bar-container"><div id="loaderBar" class="loader-bar"></div></div><p>Loading episodes...</p>
+    <div class="loader-bar-container"><div id="loaderBar" class="loader-bar"></div></div>
+    <p>Loading episodes...</p>
   </div>
   <header class="text-center mt-4"><h1 class="text-4xl font-extrabold">Zom 100: Bucket List of the Dead</h1></header>
   <div class="video-container" onmousemove="showControls()">
@@ -86,39 +90,55 @@
     </div>
     <button class="toggle-btn">Customize UI</button>
   </div>
-  <div class="nav-buttons text-center mt-2"><button class="control-btn" onclick="prevEpisode()">Previous</button> <button class="control-btn" onclick="nextEpisode()">Next</button></div>
+  <div class="nav-buttons text-center mt-2">
+    <button class="control-btn" onclick="prevEpisode()">Previous</button>
+    <button class="control-btn" onclick="nextEpisode()">Next</button>
+  </div>
   <div id="episodeDisplay" class="episode-display">Episode 1</div>
   <div class="description-box"><h2 class="text-xl font-semibold mb-2">Description</h2><p>"Zom 100: Bucket List of the Dead" follows Akira Tendo, a 24-year-old office worker who creates a bucket list of 100 things to do after a zombie outbreak.</p><button class="control-btn mt-2" onclick="window.open('https://youtube.com/@museasia','_blank')">Subscribe to Muse Asia</button></div>
   <input id="searchBox" class="search-box" placeholder="Search episodes..." oninput="filterEpisodes()" />
   <div id="episodeList"></div>
   <footer class="mt-10 text-sm text-center text-gray-400"><p>Thank you for visiting! Please <strong>subscribe to Muse India</strong> to support anime in our region.</p></footer>
   <script>
-    const episodes=[
-      {title:"Episode 1",link:"qRd5wbH4Cio"},{title:"Episode 2",link:"_z2gQeguOA0"},{title:"Episode 3",link:"0kl6UUQW_K4"},{title:"Episode 4",link:"JzXyCc_Sj5Q"},{title:"Episode 5",link:"IHM4aCbhUmo"},{title:"Episode 6",link:"93PPhq0V0MM"},{title:"Episode 7",link:"E9WUKtmRQdc"},{title:"Episode 8",link:"HSQc97u8s0Q"},{title:"Episode 9",link:"XTafDZ9ZhUY"},{title:"Episode 10",link:"GJNugrEKk2w"},{title:"Episode 11",link:"EWZrbSs6SOM"},{title:"Episode 12",link:"A1vXw83JAqo"}
+    const episodes = [
+      { title: "Episode 1", link: "qRd5wbH4Cio" },
+      { title: "Episode 2", link: "_z2gQeguOA0" },
+      { title: "Episode 3", link: "0kl6UUQW_K4" },
+      { title: "Episode 4", link: "JzXyCc_Sj5Q" },
+      { title: "Episode 5", link: "IHM4aCbhUmo" },
+      { title: "Episode 6", link: "93PPhq0V0MM" },
+      { title: "Episode 7", link: "E9WUKtmRQdc" },
+      { title: "Episode 8", link: "HSQc97u8s0Q" },
+      { title: "Episode 9", link: "XTafDZ9ZhUY" },
+      { title: "Episode 10", link: "GJNugrEKk2w" },
+      { title: "Episode 11", link: "EWZrbSs6SOM" },
+      { title: "Episode 12", link: "A1vXw83JAqo" }
     ];
-    let player,currentEpisodeIndex=0,hideControlsTimer,isDragging=false;
-    function showLoader(){const o=document.getElementById('loaderOverlay'),b=document.getElementById('loaderBar');o.style.display='flex';let e=0,d=5000,i=100;const t=setInterval(()=>{e+=i;b.style.width=Math.min(e/d*100,100)+'%';if(e>=d)clearInterval(t)},i);}
-    function hideLoader(){document.getElementById('loaderOverlay').style.display='none';}
-    function onYouTubeIframeAPIReady(){player=new YT.Player('videoPlayer',{videoId:episodes[0].link,playerVars:{autoplay:1,controls:0,modestbranding:1,rel:0,playsinline:1},events:{onReady:e=>{e.target.playVideo();showLoader();setTimeout(()=>{init();hideLoader()},5000);document.querySelector('.video-container').addEventListener('click',()=>{player.unMute();player.setVolume(100);},{once:!0});const m=document.getElementById('muteToggle');m.onclick=()=>{player.isMuted()? (player.unMute(),m.textContent='Mute'):(player.mute(),m.textContent='Unmute');};},onStateChange:e=>{e.data===YT.PlayerState.ENDED&&nextEpisode()}}});}
-    function init(){loadEpisodes();updateDisplay();}
-    function loadEpisodes(){const l=document.getElementById('episodeList');l.innerHTML='';episodes.forEach((ep,i)=>{const b=document.createElement('div');b.className='episode-btn';b.textContent=ep.title;b.onclick=()=>{currentEpisodeIndex=i;player.loadVideoById(ep.link);updateDisplay()};l.appendChild(b);});}
-    function updateDisplay(){document.getElementById('episodeDisplay').textContent=`Episode ${currentEpisodeIndex+1}`;document.querySelectorAll('.episode-btn').forEach((b,i)=>b.classList.toggle('active',i===currentEpisodeIndex));}
-    function nextEpisode(){currentEpisodeIndex<episodes.length-1&&(currentEpisodeIndex++,player.loadVideoById(episodes[currentEpisodeIndex].link),updateDisplay());}
-    function prevEpisode(){currentEpisodeIndex>0&&(currentEpisodeIndex--,player.loadVideoById(episodes[currentEpisodeIndex].link),updateDisplay());}
-    function showControls(){clearTimeout(hideControlsTimer);document.getElementById('videoControls').style.opacity=1;document.getElementById('progress-bar').style.opacity=1;hideControlsTimer=setTimeout(()=>{document.getElementById('videoControls').style.opacity=0;document.getElementById('progress-bar').style.opacity=0},3000);}
-    function seek(s){player.seekTo(player.getCurrentTime()+s,!0);}
-    function togglePlayPause(){const st=player.getPlayerState();st===YT.PlayerState.PLAYING?player.pauseVideo():player.playVideo();}
-    function toggleFullscreen(){const el=document.querySelector('.video-container');!document.fullscreenElement&&!document.webkitFullscreenElement?el.requestFullscreen?el.requestFullscreen():el.webkitRequestFullscreen():document.exitFullscreen?document.exitFullscreen():document.webkitExitFullscreen();}
-    function onFullScreenChange(){const fs=document.fullscreenElement||document.webkitFullscreenElement;if(fs){screen.orientation&&screen.orientation.lock&&screen.orientation.lock('landscape').catch(console.warn);}else{screen.orientation&&screen.orientation.unlock&&screen.orientation.unlock();}}
-    document.addEventListener('fullscreenchange',onFullScreenChange);
-    document.addEventListener('webkitfullscreenchange',onFullScreenChange);
-    const progressBar=document.getElementById('progress-bar'),progress=document.getElementById('progress');
-    progressBar.addEventListener('mousedown',e=>{isDragging=!0;updateSeek(e);});
-    document.addEventListener('mousemove',e=>{isDragging&&updateSeek(e);});
-    document.addEventListener('mouseup',()=>{isDragging=!1;});
-    function updateSeek(e){const r=progressBar.getBoundingClientRect(),x=Math.max(0,Math.min(e.clientX-r.left,r.width)),pct=x/r.width;progress.style.width=pct*100+'%';player&&player.seekTo&&(player.seekTo(pct*player.getDuration(),!0));}
-    setInterval(()=>{!isDragging&&player&&player.getCurrentTime&&(progress.style.width=player.getCurrentTime()/player.getDuration()*100+'%');},200);
-    function filterEpisodes(){const q=document.getElementById('searchBox').value.toLowerCase();document.querySelectorAll('#episodeList .episode-btn').forEach(b=>{b.style.display=b.textContent.toLowerCase().includes(q)?'block':'none';});}
+    let player, currentEpisodeIndex = 0, hideControlsTimer, isDragging = false;
+    function showLoader() {
+      const overlay = document.getElementById('loaderOverlay'), bar = document.getElementById('loaderBar');
+      overlay.style.display = 'flex'; let elapsed=0, duration=5000, interval=100;
+      const timer = setInterval(() => { elapsed+=interval; bar.style.width=Math.min(elapsed/duration*100,100)+'%'; if(elapsed>=duration) clearInterval(timer); }, interval);
+    }
+    function hideLoader() { document.getElementById('loaderOverlay').style.display = 'none'; }
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('videoPlayer', { videoId: episodes[0].link, playerVars: { autoplay:1, controls:0, modestbranding:1, rel:0, playsinline:1 }, events: { onReady: e => { e.target.playVideo(); showLoader(); setTimeout(() => { init(); hideLoader(); }, 5000); document.querySelector('.video-container').addEventListener('mousemove', showControls); const muteBtn = document.getElementById('muteToggle'); muteBtn.onclick = () => { if(player.isMuted()) { player.unMute(); muteBtn.textContent='Mute'; } else { player.mute(); muteBtn.textContent='Unmute'; } }; }, onStateChange: e => { if(e.data===YT.PlayerState.ENDED) nextEpisode(); } } });
+    }
+    function init() { loadEpisodes(); updateDisplay(); }
+    function loadEpisodes() { const list = document.getElementById('episodeList'); list.innerHTML=''; episodes.forEach((ep,i)=>{ const btn=document.createElement('div'); btn.className='episode-btn'; btn.textContent=ep.title; btn.onclick=()=>{ currentEpisodeIndex=i; player.loadVideoById(ep.link); updateDisplay(); }; list.appendChild(btn); }); }
+    function updateDisplay() { document.getElementById('episodeDisplay').textContent=`Episode ${currentEpisodeIndex+1}`; document.querySelectorAll('.episode-btn').forEach((b,i)=>b.classList.toggle('active', i===currentEpisodeIndex)); }
+    function nextEpisode() { if(currentEpisodeIndex<episodes.length-1) { currentEpisodeIndex++; player.loadVideoById(episodes[currentEpisodeIndex].link); updateDisplay(); } }
+    function	prevEpisode() { if(currentEpisodeIndex>0) { currentEpisodeIndex--; player.loadVideoById(episodes[currentEpisodeIndex].link); updateDisplay(); } }
+    function seek(sec) { player.seekTo(player.getCurrentTime()+sec,true); }
+    function togglePlayPause() { const state=player.getPlayerState(); state===YT.PlayerState.PLAYING?player.pauseVideo():player.playVideo(); }
+    function toggleFullscreen() { const el=document.querySelector('.video-container'); if(!document.fullscreenElement&&!document.webkitFullscreenElement) { el.requestFullscreen?el.requestFullscreen():el.webkitRequestFullscreen(); } else { document.exitFullscreen?document.exitFullscreen():document.webkitExitFullscreen(); } }
+    function showControls() { clearTimeout(hideControlsTimer); document.getElementById('videoControls').style.opacity=1; document.getElementById('progress-bar').style.opacity=1; hideControlsTimer=setTimeout(()=>{ document.getElementById('videoControls').style.opacity=0; document.getElementById('progress-bar').style.opacity=0; },3000); }
+    function updateSeek(e) { const bar=document.getElementById('progress-bar').getBoundingClientRect(); let x=Math.max(0,Math.min(e.clientX-bar.left,bar.width)); const pct=x/bar.width; document.getElementById('progress').style.width=pct*100+'%'; if(player&&player.seekTo) player.seekTo(pct*player.getDuration(),true); }
+    document.addEventListener('mousemove', e=>isDragging&&updateSeek(e));
+    document.addEventListener('mouseup',()=>isDragging=false);
+    document.getElementById('progress-bar').addEventListener('mousedown',e=>{ isDragging=true; updateSeek(e); });
+    setInterval(()=>{ if(!isDragging&&player&&player.getCurrentTime) { document.getElementById('progress').style.width=player.getCurrentTime()/player.getDuration()*100+'%'; } },200);
+    function filterEpisodes() { const q=document.getElementById('searchBox').value.toLowerCase(); document.querySelectorAll('#episodeList .episode-btn').forEach(b=>{ b.style.display=b.textContent.toLowerCase().includes(q)?'block':'none'; }); }
   </script>
 </body>
 </html>
