--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>Wind Breaker - Season 1</title>
-  <script async src="https://www.youtube.com/iframe_api"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;800&family=Roboto&family=Orbitron&family=Montserrat&family=Fira+Sans&display=swap" rel="stylesheet">
   <style>
     :root {
       --bg-color: #0b0f1a;
@@ -18,96 +19,107 @@
       --font-family: 'Poppins', sans-serif;
     }
     html, body {
-      height: 100%; margin: 0; font-family: var(--font-family);
-      background-color: var(--bg-color); color: var(--text-color);
+      height: 100%;
+      margin: 0;
+      font-family: var(--font-family);
+      background-color: var(--bg-color);
+      color: var(--text-color);
       overflow-x: hidden;
-    }
-    /* Loader Overlay */
-    .loader-overlay {
-      position: fixed; top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.8);
-      display: none; /* hidden by default */
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-    }
-    .loader-bar-container {
-      width: 80%; max-width: 400px;
-      height: 10px;
-      background: rgba(255,255,255,0.2);
-      border-radius: 5px;
-      overflow: hidden;
-      margin-bottom: 10px;
-    }
-    .loader-bar {
-      width: 0%; height: 100%;
-      background: var(--accent-color);
-      transition: width 0.1s linear;
+      transition: background-color 0.5s, color 0.5s, font-family 0.3s;
     }
     .video-container {
-      position: relative; padding-top: 56.25%; max-width: 800px;
-      margin: 20px auto; background-color: black;
+      position: relative;
+      padding-top: 56.25%;
+      background-color: black;
+      margin: 20px auto;
+      max-width: 800px;
+    }
+    .video-container:fullscreen,
+    .video-container:-webkit-full-screen {
+      padding-top: 0 !important;
+      width: 100vw;
+      height: 100vh;
     }
     #videoPlayer, .overlay-layer {
-      position: absolute; top: 0; left: 0;
+      position: absolute;
+      top: 0; left: 0;
       width: 100%; height: 100%;
     }
+    .overlay-layer { z-index: 2; }
     .controls, .progress-bar, .toggle-btn {
-      opacity: 0; transition: opacity 0.3s;
+      opacity: 0;
+      transition: opacity 0.3s;
     }
     .controls {
-      position: absolute; bottom: 10px; left: 50%;
-      transform: translateX(-50%); display: flex; gap: 6px;
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 6px;
+      z-index: 3;
     }
     .control-btn {
-      background-color: var(--control-bg); color: var(--text-color);
-      border: none; padding: 6px 10px; border-radius: 6px;
-      cursor: pointer; font-size: 12px;
+      background-color: var(--control-bg);
+      color: var(--text-color);
+      border: none;
+      padding: 6px 10px;
+      font-size: 12px;
+      border-radius: 6px;
+      cursor: pointer;
     }
     .control-btn:hover { background-color: var(--accent-color); }
     .progress-bar {
-      position: absolute; bottom: 38px; left: 10%; width: 80%; height: 12px;
-      background: rgba(255,255,255,0.3); cursor: pointer;
+      position: absolute;
+      bottom: 38px;
+      left: 10%;
+      width: 80%;
+      height: 12px;
+      background: rgba(255,255,255,0.3);
+      cursor: pointer;
+      z-index: 3;
     }
     .progress { height: 100%; background: var(--accent-color); width: 0%; }
     .toggle-btn {
-      position: absolute; top: 10px; right: 10px;
-      background-color: var(--accent-color); color: var(--text-color);
-      padding: 6px 12px; border: none; border-radius: 6px; cursor: pointer;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      z-index: 200;
+      background-color: var(--accent-color);
+      color: var(--text-color);
+      padding: 6px 12px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
     }
+    .floating-panel { position: fixed; top: 50px; background-color: var(--control-bg); color: var(--text-color); padding: 10px; border-radius: 10px; z-index: 100; display: none; }
+    .theme-panel { right: 10px; }
+    .neon-panel { right: 160px; }
+    .font-panel { right: 310px; }
+    .panel-title { font-size: 14px; margin-bottom: 5px; font-weight: bold; }
+    .panel-item { margin-bottom: 4px; cursor: pointer; font-size: 12px; }
+    .panel-item:hover { color: var(--accent-color); }
+    .search-box { width: 100%; max-width: 400px; margin: 1rem auto; display: block; padding: 8px 12px; border-radius: 6px; border: none; background-color: var(--control-bg); color: var(--text-color); }
+    #episodeList { display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px; max-width: 800px; margin: 20px auto; }
     .episode-btn { padding: 10px; background: #2d2d3d; border-radius: 6px; text-align: center; cursor: pointer; }
     .episode-btn.active { background: var(--accent-color); }
     .episode-btn:hover { background: #444; }
-    .search-box {
-      display: block; width: 100%; max-width: 400px;
-      margin: 1rem auto; padding: 8px 12px; border-radius: 6px;
-      border: none; background-color: var(--control-bg); color: var(--text-color);
-    }
-    .description-box {
-      max-width: 800px; margin: 20px auto;
-      background: rgba(0,0,0,0.6); padding: 15px;
-      border-radius: 8px; box-shadow: var(--box-border);
-    }
-    .episode-display { text-align: center; margin-top: 8px; font-weight: bold; }
-    #episodeList { display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px; max-width: 800px; margin: 20px auto; }
+    .description-box { max-width: 800px; margin: 20px auto; background: rgba(0,0,0,0.6); padding: 15px; border-radius: 8px; box-shadow: var(--box-border); }
+    .popup-overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.8); display:flex; align-items:center; justify-content:center; z-index:300; color:#fff; text-align:center; padding:20px; }
+    .popup-box { background:#111; padding:20px; border-radius:8px; max-width:300px; }
+    .hidden { display: none; }
+    .nav-buttons { text-align:center; margin:10px 0; }
+    .nav-buttons button { margin: 0 5px; }
+    .episode-display { text-align:center; margin-top:8px; font-weight:bold; }
   </style>
 </head>
-<body>
-  <!-- Loader Popup -->
-  <div id="loaderOverlay" class="loader-overlay">
-    <div class="loader-bar-container">
-      <div id="loaderBar" class="loader-bar"></div>
-    </div>
-    <p>Loading episodes...</p>
-  </div>
 
-  <header class="text-center mt-4">
-    <h1 class="text-4xl font-extrabold">Wind Breaker - Season 1</h1>
+<body>
+  <header class="text-center mt-4 relative">
+    <h1 class="text-4xl font-extrabold neon">Wind Breaker - Season 1</h1>
   </header>
 
-  <div class="video-container" onmousemove="showControls()">
+  <div class="video-container rounded-xl shadow-lg overflow-hidden relative neon-box" onmousemove="showControls()">
     <div id="videoPlayer"></div>
     <div class="overlay-layer" onclick="togglePlayPause()"></div>
     <div class="progress-bar" id="progress-bar"><div class="progress" id="progress"></div></div>
@@ -117,10 +129,11 @@
       <button class="control-btn" onclick="seek(10)">+10s</button>
       <button class="control-btn" onclick="toggleFullscreen()">Fullscreen</button>
     </div>
-    <button class="toggle-btn">Customize UI</button>
+    <button class="toggle-btn" id="uiToggle">Customize UI</button>
   </div>
 
-  <div class="nav-buttons text-center mt-2">
+  <!-- Nav Buttons & Display -->
+  <div class="nav-buttons">
     <button class="control-btn" onclick="prevEpisode()">Previous</button>
     <button class="control-btn" onclick="nextEpisode()">Next</button>
   </div>
@@ -128,8 +141,8 @@
 
   <div class="description-box">
     <h2 class="text-xl font-semibold mb-2">Description</h2>
-    <p>Haruka Sakura wants nothing to do with weaklings—he's only interested in the strongest of the strong...</p>
-    <button class="control-btn mt-2" onclick="window.open('https://youtube.com/@museasia', '_blank')">Subscribe to Muse Asia</button>
+    <p>Haruka Sakura wants nothing to do with weaklings—he's only interested in the strongest of the strong. He's just started at Furin High School, a school of degenerates known only for their brawling strength—a strength they use to protect their town from anyone who wishes it ill.</p>
+    <button class="subscribe-btn" onclick="window.open('https://youtube.com/@museasia?si=6x9eXmTP93_PuwT-', '_blank')">Subscribe to Muse Asia</button>
   </div>
 
   <input type="text" id="searchBox" class="search-box" placeholder="Search episodes..." oninput="filterEpisodes()">
@@ -139,8 +152,21 @@
     <p>Thank you for visiting! Please <strong>subscribe to Muse India</strong> to support anime in our region.</p>
   </footer>
 
+  <!-- Popup & Panels -->
+  <div class="popup-overlay hidden" id="adPopup">
+    <div class="popup-box">
+      <h3 class="text-lg font-bold mb-2">Support Us</h3>
+      <p class="mb-4">To watch this anime, support us!<br><small>(Caution: don't download anything; ads are not directed by me.)</small></p>
+      <button class="control-btn mb-2" id="adButton" disabled>Wait...</button>
+      <div id="countdown">Please wait 5s...</div>
+    </div>
+  </div>
+
+  <div class="floating-panel theme-panel" id="themePanel"><div class="panel-title">Themes</div><div id="themeList"></div></div>
+  <div class="floating-panel neon-panel" id="neonPanel"><div class="panel-title">Neon Colors</div><div id="neonList"></div></div>
+  <div class="floating-panel font-panel" id="fontPanel"><div class="panel-title">Fonts</div><div id="fontList"></div></div>
+
   <script>
-    // Episodes data
     const episodes = [
       { title: "Episode 1", link: "ne0Y0vyjxpE" },
       { title: "Episode 2", link: "J2568cnOa1g" },
@@ -156,60 +182,23 @@
       { title: "Episode 12", link: "skAwsc6UL8A" },
       { title: "Episode 13", link: "-xUk9E2iQQY" }
     ];
-
     let player, currentEpisodeIndex = 0, hideControlsTimer, isDragging = false;
 
-    // Loader functions
-    function showLoader() {
-      const overlay = document.getElementById('loaderOverlay');
-      const bar = document.getElementById('loaderBar');
-      overlay.style.display = 'flex';
-      let elapsed = 0;
-      const duration = 5000;
-      const interval = 100;
-      const timer = setInterval(() => {
-        elapsed += interval;
-        const pct = Math.min((elapsed / duration) * 100, 100);
-        bar.style.width = pct + '%';
-        if (elapsed >= duration) clearInterval(timer);
-      }, interval);
-    }
-
-    function hideLoader() {
-      document.getElementById('loaderOverlay').style.display = 'none';
-    }
-
-    // YouTube API ready
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('videoPlayer', {
         videoId: episodes[0].link,
-        playerVars: {
-          autoplay: 1,
-          controls: 0,
-          modestbranding: 1,
-          rel: 0,
-          mute: 1,
-          playsinline: 1
-        },
+        playerVars: { autoplay: 1, controls: 0, modestbranding: 1, rel: 0 },
         events: {
-          onReady: (e) => {
-            e.target.playVideo();
-            const iframe = player.getIframe();
-            iframe.setAttribute('allow', 'autoplay; fullscreen');
-            showLoader();
-            setTimeout(() => {
-              init();
-              hideLoader();
-            }, 5000);
-          },
+          onReady: () => { init(); },
           onStateChange: e => { if (e.data === YT.PlayerState.ENDED) nextEpisode(); }
         }
       });
     }
 
-    // Initialize episode list and display
     function init() {
       loadEpisodes();
+      loadUISettings();
+      showPopup();
       updateDisplay();
     }
 
@@ -232,32 +221,29 @@
       });
     }
 
-    // Navigation controls
     function nextEpisode() { if (currentEpisodeIndex < episodes.length - 1) { currentEpisodeIndex++; player.loadVideoById(episodes[currentEpisodeIndex].link); updateDisplay(); } }
     function prevEpisode() { if (currentEpisodeIndex > 0) { currentEpisodeIndex--; player.loadVideoById(episodes[currentEpisodeIndex].link); updateDisplay(); } }
 
-    // Video controls and progress bar
     function showControls() {
       clearTimeout(hideControlsTimer);
       document.getElementById('videoControls').style.opacity = 1;
+      document.getElementById('uiToggle').style.opacity = 1;
       document.getElementById('progress-bar').style.opacity = 1;
       hideControlsTimer = setTimeout(() => {
         document.getElementById('videoControls').style.opacity = 0;
+        document.getElementById('uiToggle').style.opacity = 0;
         document.getElementById('progress-bar').style.opacity = 0;
       }, 3000);
     }
 
     function seek(sec) { player.seekTo(player.getCurrentTime() + sec, true); }
     function togglePlayPause() { const s = player.getPlayerState(); s === YT.PlayerState.PLAYING ? player.pauseVideo() : player.playVideo(); }
-    function toggleFullscreen() {
-      const el = document.querySelector('.video-container');
-      !document.fullscreenElement ? el.requestFullscreen() : document.exitFullscreen();
-    }
+    function toggleFullscreen() { const w = document.querySelector('.video-container'); document.fullscreenElement ? document.exitFullscreen() : w.requestFullscreen(); }
 
     const progressBar = document.getElementById('progress-bar'), progress = document.getElementById('progress');
     progressBar.addEventListener('mousedown', e => { isDragging = true; updateSeek(e); });
     document.addEventListener('mousemove', e => { if (isDragging) updateSeek(e); });
-    document.addEventListener('mouseup', () => { isDragging = false; });
+    document.addEventListener('mouseup', e => { if (isDragging) { updateSeek(e); isDragging = false; } });
 
     function updateSeek(e) {
       const rect = progressBar.getBoundingClientRect();
@@ -281,6 +267,92 @@
         btn.style.display = btn.textContent.toLowerCase().includes(q) ? 'block' : 'none';
       });
     }
+
+    const popup = document.getElementById('adPopup'), btnAd = document.getElementById('adButton'), cd = document.getElementById('countdown');
+    function showPopup() {
+      if (!localStorage.getItem('adClickedAt')) {
+        popup.classList.remove('hidden');
+        let t = 5;
+        const iv = setInterval(() => {
+          t--;
+          cd.textContent = `Please wait ${t}s...`;
+          if (t <= 0) {
+            clearInterval(iv);
+            btnAd.textContent = 'Watch Ad';
+            btnAd.disabled = false;
+          }
+        }, 1000);
+      }
+    }
+
+    function onAdClick() {
+      localStorage.setItem('adClickedAt', Date.now());
+      window.open('https://sawutser.top/4/9278457', '_blank');
+      popup.classList.add('hidden');
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      // Fallback in case YouTube API fails
+      loadEpisodes();
+      setInterval(() => {
+        const ts = localStorage.getItem('adClickedAt');
+        if (ts && Date.now() - ts > 3600000) localStorage.removeItem('adClickedAt');
+      }, 60000);
+    });
+
+    // UI Panels & Storage
+    const themes = [['#0b0f1a','#fff','#8e2de2','Dark Violet'],['#1a1a1a','#eee','#ff4081','Dark Pink'],['#121212','#ddd','#00bcd4','Dark Aqua'],['#1e1e2f','#e5e5e5','#ff9800','Dark Orange'],['#202020','#fafafa','#e91e63','Dark Rose'],['#ffffff','#000','#ff4081','White Pink'],['#f9f9f9','#111','#3f51b5','White Indigo'],['#eeeeee','#000','#009688','White Teal'],['#fff','#333','#673ab7','White Purple'],['#f0f0f0','#111','#ff5722','White Red']];
+    const neonColors = [['#39ff14','Neon Green'],['#ff00ff','Neon Magenta'],['#00ffff','Neon Cyan'],['#ffd700','Neon Gold'],['#00ff00','Neon Lime'],['#ff4444','Neon Red'],['#44ffdd','Neon Aqua'],['#cc00cc','Neon Purple'],['#ffaa00','Neon Orange'],['#00ccff','Neon Sky']];
+    const fontsList = [['Poppins','Poppins'],['Roboto','Roboto'],['Orbitron','Orbitron'],['Montserrat','Montserrat'],['Fira Sans','Fira Sans']];
+    let localTheme = null, localNeon = null, localFont = null;
+
+    function applyTheme(bg, txt, acc, ctrlBg) { document.documentElement.style.setProperty('--bg-color', bg); document.documentElement.style.setProperty('--text-color', txt); document.documentElement.style.setProperty('--accent-color', acc); document.documentElement.style.setProperty('--control-bg', ctrlBg); }
+    function applyNeon(col) { document.documentElement.style.setProperty('--neon-glow', col); document.documentElement.style.setProperty('--box-border', `0 0 10px ${col}`); }
+    function applyFont(f) { document.documentElement.style.setProperty('--font-family', `${f}, sans-serif`); }
+    function saveUISettings() { localStorage.setItem('uiSettings', JSON.stringify({ theme: localTheme, neon: localNeon, font: localFont })); }
+    function loadUISettings() {
+      const saved = localStorage.getItem('uiSettings'); if (!saved) return;
+      const { theme, neon, font } = JSON.parse(saved);
+      if (theme) { const [bg, txt, acc] = theme; const ctrlBg = bg.includes('#fff') ? 'rgba(0,0,0,0.1)' : 'rgba(0,0,0,0.6)'; applyTheme(bg, txt, acc, ctrlBg); localTheme = theme; }
+      if (neon) { applyNeon(neon); localNeon = neon; }
+      if (font) { applyFont(font); localFont = font; }
+    }
+
+    document.getElementById('uiToggle').addEventListener('click', () => {
+      ['themePanel','neonPanel','fontPanel'].forEach(id => {
+        const el = document.getElementById(id);
+        el.style.display = (el.style.display === 'block') ? 'none' : 'block';
+      });
+    });
+
+    const themeListEl = document.getElementById('themeList');
+    themes.forEach(item => {
+      const [bg, txt, acc, name] = item;
+      const d = document.createElement('div');
+      d.className = 'panel-item';
+      d.textContent = name;
+      d.onclick = () => { const ctrlBg = bg.includes('#fff') ? 'rgba(0,0,0,0.1)' : 'rgba(0,0,0,0.6)'; applyTheme(bg, txt, acc, ctrlBg); localTheme = item; saveUISettings(); };
+      themeListEl.appendChild(d);
+    });
+
+    const neonListEl = document.getElementById('neonList');
+    neonColors.forEach(([col, name]) => {
+      const d = document.createElement('div');
+      d.className = 'panel-item';
+      d.textContent = name;
+      d.onclick = () => { applyNeon(col); localNeon = col; saveUISettings(); };
+      neonListEl.appendChild(d);
+    });
+
+    const fontListEl = document.getElementById('fontList');
+    fontsList.forEach(([f, label]) => {
+      const d = document.createElement('div');
+      d.className = 'panel-item';
+      d.textContent = label;
+      d.onclick = () => { applyFont(f); localFont = f; saveUISettings(); };
+      fontListEl.appendChild(d);
+    });
   </script>
 </body>
+
 </html>
