--- a/index.2.html
+++ b/index.2.html
@@ -232,6 +232,16 @@
         cover: "photo/unnammmmmed.jpg",
         link: "anime/musoku.html"
       },
+       "spy x family ": {
+        title: "spy x family",
+        cover: "photo/unnamed (8).jpg",
+        link: "anime/spy.html"
+      },
+       "dandadan": {
+        title: "dandadan",
+        cover: "photo/unnamed (9).jpg",
+        link: "anime/Dan.html"
+      },
       "Fairy tail  in Hindi all episodes ": {
         title: "Fairy tail  in Hindi all episodes ",
         cover: "photo/unnamed (7).jpg",
