--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta name="google-site-verification" content="p0QemVVXE7ylNB20f3L0xYlUMALMRVxDG2m6NusvxjE" />
+<meta name="description" content="Watch high-quality anime videos online with smooth playback, multiple themes, and full-screen support. Stream your favorite anime episodes for free.">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="monetag" content="3f1e4f2b60d2dd5305688e79ae395482">
