--- a/support.html
+++ b/support.html
@@ -4,89 +4,102 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Support Us - Doosh Hub</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&display=swap" rel="stylesheet">
+  
+  <!-- Monetag Multi-Ad Script -->
+  <script src="https://ligheechoagool.com/88/tag.min.js" data-zone="145569" async data-cfasync="false"></script>
 
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: radial-gradient(circle at top, #0f0f0f, #000000 100%);
-      font-family: 'Orbitron', sans-serif;
-      color: #ffffff;
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(135deg, #1e1e2f, #000);
+      color: #e0e0e0;
       text-align: center;
       overflow-x: hidden;
     }
 
     header {
-      background: linear-gradient(45deg, #00ffff, #ff00ff);
-      padding: 20px;
-      font-size: 30px;
-      font-weight: bold;
-      color: white;
-      text-shadow: 0 0 10px #fff, 0 0 20px #ff00ff;
-      box-shadow: 0 0 20px #ff00ff;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      padding: 25px;
+      font-size: 32px;
+      font-family: 'Orbitron', sans-serif;
+      color: #ffffff;
+      text-shadow: 0 0 5px #00ffff, 0 0 10px #00ffff;
+      box-shadow: 0 4px 10px rgba(0, 255, 255, 0.2);
+    }
+
+    .nav-buttons {
+      margin-top: 20px;
     }
 
     .nav-buttons button {
-      background: transparent;
-      border: 2px solid #00ffff;
-      padding: 10px 20px;
-      color: white;
-      font-size: 18px;
-      border-radius: 10px;
-      margin: 10px;
+      background-color: transparent;
+      border: 2px solid #00d4ff;
+      padding: 10px 24px;
+      font-size: 16px;
+      border-radius: 8px;
+      color: #fff;
+      margin: 8px;
       cursor: pointer;
       transition: all 0.3s ease;
     }
 
     .nav-buttons button:hover {
-      background: #00ffff30;
-      transform: scale(1.05);
-      box-shadow: 0 0 15px #00ffff;
+      background-color: #00d4ff22;
+      box-shadow: 0 0 12px #00d4ff;
     }
 
     .container {
       max-width: 900px;
-      margin: 30px auto;
+      margin: 40px auto;
       padding: 30px;
-      background: #121212dd;
-      border-radius: 15px;
-      box-shadow: 0 0 25px #ff00ff40;
+      background: #1b1b2f;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
     }
 
     h2, h3 {
       color: #00ffff;
+      font-family: 'Orbitron', sans-serif;
       text-shadow: 0 0 10px #00ffff;
     }
 
     p, li {
-      color: #ccc;
-      font-size: 17px;
-      line-height: 1.6;
+      font-size: 16px;
+      line-height: 1.7;
+      color: #d0d0d0;
     }
 
-    ul, ol {
+    ol {
       text-align: left;
       max-width: 700px;
       margin: 0 auto 20px;
     }
 
+    .support-buttons {
+      margin-top: 30px;
+    }
+
     .support-buttons button {
-      background: linear-gradient(45deg, #ff00ff, #00ffff);
+      background: linear-gradient(45deg, #ff00cc, #3333ff);
       color: white;
       border: none;
-      font-size: 18px;
-      padding: 12px 30px;
-      border-radius: 14px;
-      margin: 12px;
+      font-size: 16px;
+      padding: 12px 24px;
+      border-radius: 10px;
+      margin: 12px 10px;
       cursor: pointer;
-      box-shadow: 0 0 20px #ff00ff80;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 4px 15px rgba(255, 0, 204, 0.3);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
     .support-buttons button:hover {
-      transform: scale(1.1);
-      box-shadow: 0 0 30px #00ffff;
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #00ffff;
     }
 
     .footer {
@@ -96,9 +109,9 @@
     }
 
     @keyframes floating {
-      0% { transform: translateY(0px); }
-      50% { transform: translateY(-10px); }
-      100% { transform: translateY(0px); }
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
+      100% { transform: translateY(0); }
     }
 
     .animated-bg {
@@ -113,19 +126,20 @@
   </header>
 
   <div class="nav-buttons">
-    <button onclick="location.href='index.html'">Main Page</button>
-    <button onclick="location.href='index.2.html'">Content Page</button>
+    <button onclick="location.href='index.html'">Back to Anime</button>
+    <button onclick="location.href='index.2.html'">Main Website</button>
   </div>
 
   <div class="container">
     <h2>Help Us Shine Brighter</h2>
     <p>Thank you for visiting. If you love what we do, your support helps us stay online and deliver more magic every day!</p>
-<p><strong>Disclaimer:</strong> All ads on this page are managed by Monetag. We do not promote or control the ad content. Please do not download anything suspicious and avoid interacting with adult or pirated content. This page is purely for supporting our hosting and content efforts.</p>
+    <p><strong>Disclaimer:</strong> All ads on this page are managed by Monetag. We do not promote or control the ad content. Please avoid downloading suspicious content or interacting with adult or pirated material. Your support helps keep us running.</p>
+
     <h3>How to Support:</h3>
     <ol>
       <li>Click the glowing buttons below.</li>
       <li>A new tab/pop-up will open. Stay on it for a few seconds.</li>
-      <li>Each click helps us — even repeating them.</li>
+      <li>Each click helps us — you can repeat it as much as you like.</li>
     </ol>
 
     <div class="support-buttons">
