--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -189,7 +189,7 @@ body.loading {
   </footer>  <div class="popup-overlay hidden" id="adPopup">
     <div class="popup-box">
       <h3 class="text-lg font-bold mb-2">Support Us</h3>
-      <p class="mb-4">To watch this anime, support us!<br><small>(Caution: don't download anything; ads are not directed by me.)</small></p>
+      <p class="mb-4"> support us!<br><small>(Caution: don't download anything; ads are not directed by me.)</small></p>
       <button class="control-btn mb-2" id="adButton" onclick="onAdClick()" disabled>Wait...</button>
       <div id="countdown">Please wait 5s...</div>
     </div>
