--- a/anime/fairy.html
+++ b/anime/fairy.html
@@ -175,6 +175,11 @@ body.loading {
     <button class="control-btn" onclick="nextEpisode()">Next</button>
   </div>
   <div class="episode-display" id="episodeDisplay">Episode 1</div>
+<div class="text-center mt-6">
+  <button onclick="window.location.href='fairy2.html'" class="control-btn text-lg px-4 py-2">
+    Watch Season 2
+  </button>
+</div>
   <div class="description-box">
     <h2 class="text-xl font-semibold mb-2">Description</h2>
     <p>"Fairy Tail is a fantasy adventure anime and manga series that follows the fiery and fun-filled journey of Natsu Dragneel, a dragon slayer wizard, and his friends in the magical guild Fairy Tail. Together with Lucy, Gray, Erza, and Happy, Natsu takes on powerful enemies, dark guilds, and epic quests, all while emphasizing themes of friendship, loyalty, and never giving up.</p>
