--- a/index.2.html
+++ b/index.2.html
@@ -242,6 +242,31 @@
         cover: "photo/unnamed (9).jpg",
         link: "anime/Dan.html"
       },
+      "that time i reincarnated as slime in hindi": {
+        title: "that time i reincarnated as slime in hindi",
+        cover: "photo/that time i reincarnated as slime in hindi.png",
+        link: "anime/that time i reincarnated as slime in hindi.html"
+      },
+      "The Familiar of Zero [EN Sub]": {
+        title: "The Familiar of Zero [EN Sub]",
+        cover: "photo/The familer of zero.jpg",
+        link: "anime/The Familiar of Zero [EN Sub].html"
+      },
+      "Shikimori's Not Just a Cutie [English Sub]": {
+        title: "Shikimori's Not Just a Cutie [English Sub]",
+        cover: "photo/Shikanori is not just a cutie.jpg",
+        link: "anime/Shikimori's Not Just a Cutie [English Sub].html"
+      },
+      "Ragna crimson english sub": {
+        title: "Ragna crimson english sub",
+        cover: "photo/Ragna crimson english sub.jpg",
+        link: "anime/Ragna crimson english sub.html"
+      },
+      "Hayouka english sub": {
+        title: "Hayouka english sub",
+        cover: "photo/Hayouka english sub.jpg",
+        link: "anime/Hyouka [English Sub].html"
+      },
       "Fairy tail  in Hindi all episodes ": {
         title: "Fairy tail  in Hindi all episodes ",
         cover: "photo/unnamed (7).jpg",
