--- a/anime/fairy.html
+++ b/anime/fairy.html
@@ -177,7 +177,7 @@ body.loading {
   <div class="episode-display" id="episodeDisplay">Episode 1</div>
 <div class="text-center mt-6">
   <button onclick="window.location.href='fairy2.html'" class="control-btn text-lg px-4 py-2">
-    Watch Season 2
+    Watch english sub all
   </button>
 </div>
   <div class="description-box">
