--- a/index.2.html
+++ b/index.2.html
@@ -242,6 +242,11 @@
         cover: "photo/unnamed (9).jpg",
         link: "anime/Dan.html"
       },
+       "Fairy tail  in english sub ": {
+        title: "Fairy tail  in Hindi all episodes ",
+        cover: "photo/unnamed (7).jpg",
+        link: "anime/fairy2.html"
+       },
       "that time i reincarnated as slime in hindi": {
         title: "that time i reincarnated as slime in hindi",
         cover: "photo/that time i reincarnated as slime in hindi.png",
